# OpenBOR-psc

engine/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  build.sh  make_arm.sh  make_linux.sh  openbor.c
engine/build_x64/: OpenBOR
engine/build_x64/Logs/: OpenBorLog.txt
engine/resources/: OpenBOR_Logo_480x272-AB.png.h  OpenBOR_Logo_480x272.xcf  OpenBOR_Logo_480x272AB.png.h  OpenBOR_Menu_480x272-AB.png.h  OpenBOR_Menu_480x272-AB.xcf
engine/sdl/: control.c  control.h  joysticks.c  joysticks.h  menu.c  video.c
engine/source/: utils.c
engine/source/pnglib/: savepng.c
engine/source/preprocessorlib/: pp_parser.c
engine/source/ramlib/: ram.c
tools/borpak/source/: borpak
